--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Varsha's Portfolio</title>
   <link rel="stylesheet" type="text/css">
   <!----- fav icon ------->
-  <link rel="shortcut icon" href="favicon.jpg">
+  <link rel="shortcut icon" href="favicon.png">
   </head>
   <body>
   </body>
