--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <title>Varsha's Portfolio</title>
   <link rel="stylesheet" type="text/css">
   <!----- favicon ------->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
   </body>
