Connect to style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <title>Varsha's Portfolio</title>
-  <link rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <!----- favicon ------->
     <link rel="icon" href="favicon.ico">
   </head>
