Update index.html with text

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
+    <h1> I'm Violet. </h1>
+    <p> It's kinda not my REAL name, but you get the idea. </p>
   </body>
 </html>
